--- a/src/app/merchandise/delivery/merchandise-delivery.component.html
+++ b/src/app/merchandise/delivery/merchandise-delivery.component.html
@@ -44,6 +44,7 @@
                 <p>Hình thức giao: <span class="font-weight-bold">{{ deliveryRequest.typeDisplay }}</span></p>
                 <p>Kho: <span class="font-italic">[{{ deliveryRequest.warehouseId }}
                         ] {{ deliveryRequest.warehouseName }}</span></p>
+                <p>Trạng thái phiếu giao hàng : {{ deliveryRequest.statusDisplay }}</p>
             </div>
         </div>
 
