--- a/src/app/layouts/admin/notification-list/notification-list.component.scss
+++ b/src/app/layouts/admin/notification-list/notification-list.component.scss
@@ -15,6 +15,10 @@
     margin-bottom: 8px;
     padding-bottom: 8px;
     border-bottom: 1px solid #ddd;
+    cursor: pointer;
+    &:hover{
+      background: #fcfcfc;
+    }
     .type {
       width: 108px;
       white-space: nowrap;
