--- a/src/app/merchandise/delivery/packing-products/packing-products.component.html
+++ b/src/app/merchandise/delivery/packing-products/packing-products.component.html
@@ -134,7 +134,7 @@
                   </td>
                   <td>
                     <button style="transform: scale(0.8);" pButton pRipple type="button" icon="pi pi-trash" class="ui-button-danger"
-                    *ngIf="package['products'].length > 1" (click)="removeProductInGr(i, package.merchandiseWarehouseId, rowData.merchandiseId, rowIndex , rowData)" matTooltip="Xóa kiện"
+                    *ngIf="package['products'].length > 1" (click)="removeProductInGr(i, package.merchandiseWarehouseId, rowData.merchandiseId, rowIndex)" matTooltip="Xóa kiện"
                     matTooltipPosition="above"></button>
                   </td>
                 </tr>
