--- a/src/app/merchandise/delivery/print-bill/delivery-bill/delivery-bill.component.html
+++ b/src/app/merchandise/delivery/print-bill/delivery-bill/delivery-bill.component.html
@@ -29,9 +29,9 @@
             <strong>{{printData.deliveryRequest.typeDisplay}}</strong>
           </div>
           <div style="margin-bottom: 8px;">
-            <strong>Người nhận:</strong> {{printData.deliveryRequest.contactName}}
+            <strong>Người nhận:</strong> {{printData.deliveryRequest.customerName}}
             <span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <strong>Điện thoại:</strong> {{printData.deliveryRequest.contactPhone}}
+            <strong>Điện thoại:</strong> {{printData.deliveryRequest.customerPhone}}
           </div>
           <div  style="margin-bottom: 8px;" ><strong>Địa chỉ:</strong> {{printData.deliveryRequest.customerAddress
             + '-' + printData.deliveryRequest.customerWard
