--- a/src/app/merchandise/delivery/config-shipment/config-shipment.component.scss
+++ b/src/app/merchandise/delivery/config-shipment/config-shipment.component.scss
@@ -35,7 +35,7 @@
     z-index: 5000 !important;
   }
   .mat-dialog-container {
-    padding: 0 0 !important;
+    padding: 24px !important
   }
   .dialog-header {
     height: 60px;
@@ -50,7 +50,7 @@
   }
   .dialog-header,
   .mat-dialog-content {
-    padding: 0 16px;
+    padding: 0 0;
     margin: 0 0;
     flex: 1;
     max-height: unset;
