--- a/src/app/merchandise/delivery/print-bill/print-bill.component.scss
+++ b/src/app/merchandise/delivery/print-bill/print-bill.component.scss
@@ -5,6 +5,9 @@ button:focus{
   outline: none;
 }
 /deep/ {
+  .mat-dialog-container{
+    padding: 24px !important; 
+  }
   .print-bill-dialog {
     height: 100%;
     display: flex;
