--- a/src/app/collaboration/collaboration-statistics/collaboration-statistics.component.scss
+++ b/src/app/collaboration/collaboration-statistics/collaboration-statistics.component.scss
@@ -176,6 +176,11 @@
       color: #333;
       border: 1px solid #ddd;
     }
+    &.other{
+      background: #6c757d;
+      color: #eaeaea;
+      border: 1px solid #ddd;
+    }
   }
 }
 
