--- a/src/app/layouts/admin/admin-layout.component.html
+++ b/src/app/layouts/admin/admin-layout.component.html
@@ -157,7 +157,7 @@
             </button>
 
             <mat-menu #menuNotifications="matMenu">
-               <div class="notification">
+               <div class="notification" *ngIf="lstNotification && lstNotification.length; else noNotify">
                   <div *ngFor="let notification of lstNotification" class="notification-item" (click)="showDetailNotification(notification)">
                      <span class="type" tooltipPosition="bottom"  pTooltip="{{notification.typeDisplay}}" >( {{notification.typeDisplay}} )</span>
                      <span class="title" tooltipPosition="bottom" pTooltip="{{notification.title}}">{{notification.title}}</span>
@@ -167,6 +167,13 @@
                      <mat-checkbox [checked]="turnOffNotification" (change)="notificationSetting($event)" (click)="$event.stopPropagation()" >Không hiển thị lại đến khi có thông báo mới!</mat-checkbox>
                   </div>
                </div>
+               <ng-template #noNotify>
+                  <br>
+                  <div>
+                     Không có thông báo nào
+                  </div>
+                  <br>
+               </ng-template>
             </mat-menu>
 
 
