--- a/src/app/layouts/admin/admin-layout.component.html
+++ b/src/app/layouts/admin/admin-layout.component.html
@@ -169,8 +169,8 @@
                </div>
                <ng-template #noNotify>
                   <br>
-                  <div>
-                     Không có thông báo nào
+                  <div style="padding-left: 20px;">
+                    Bạn đang không có thông báo nào
                   </div>
                   <br>
                </ng-template>
